added csrf to signup and login, fixed pidfile name

--- a/lipstr/lists/templates/login.html
+++ b/lipstr/lists/templates/login.html
@@ -29,7 +29,7 @@ body {
     
     {% block login %}
     
-    <form id="loginform">
+    <form id="loginform">{% csrf_token %}
         <div id="login-left">
             <input type="text" name="username" placeholder="Email Address">
             <input type="password" name="password" placeholder="Password">
